# vllm-kivo-vd

plugins/kivo_vllm_shadow_plugin/: README.md  pyproject.toml
plugins/kivo_vllm_shadow_plugin/kivo_vllm_shadow_plugin/: __init__.py  internal_discovery.py  kv_observation.py  plugin.py  shadow_events.py
tests_kivo/: test_kivo_source_s1_block_table_hook.py  test_kivo_vd_active_kv_policy_simulation.py  test_kivo_vd_adaptive_multilayer_generation_sweep.py  test_kivo_vd_backend_and_selector.py  test_kivo_vd_benchmark_report.py  test_kivo_vd_compare_sketch_backends.py  test_kivo_vd_debug_export.py  test_kivo_vd_dry_run_event_analyzer.py  test_kivo_vd_event_aware_buffer_accounting.py  test_kivo_vd_event_memory_estimator.py  test_kivo_vd_hf_qk_head_sweep.py  test_kivo_vd_hf_qk_script.py  test_kivo_vd_logit_sensitivity_sweep.py  test_kivo_vd_long_context_generation_sweep.py  test_kivo_vd_long_context_model_probe.py  test_kivo_vd_memory_accounting_pipeline.py  test_kivo_vd_memory_baseline.py  test_kivo_vd_memory_comparison.py  test_kivo_vd_multilayer_generation_eval.py  test_kivo_vd_observer.py  test_kivo_vd_offline_benchmark_pipeline.py  test_kivo_vd_phase10_readiness.py  test_kivo_vd_phase11_generation_readiness.py  test_kivo_vd_phase11_long_context_readiness.py  test_kivo_vd_phase11_multilayer_readiness.py  test_kivo_vd_phase11_ratio_scaled_readiness.py  test_kivo_vd_phase12_10_block_table_mutation.py  test_kivo_vd_phase12_7_runtime_patch.py  test_kivo_vd_phase12_8_9_active_ladder.py  test_kivo_vd_phase12_internal_hook_discovery.py  test_kivo_vd_phase12_plugin_generate_hook.py  (+56 more)
(+277 files in other folders)
